# atelier

./: .gitignore  .pre-commit-config.yaml  Alarm.cpp  Alarm.h  Atelier.cpp  Atelier.h  Light.cpp  Light.h  Lights.cpp  Lights.h  Makefile  Pipfile  README.md  TimeRange.cpp  TimeRange.h  TwoButtons.cpp  TwoButtons.h  config.json  config.json.template  pyproject.toml  run_server.py  server.py
arduino/: Alarm.cpp  Alarm.h  Alert.cpp  Alert.h  AlertLight.cpp  AlertLight.h  Atelier.cpp  Atelier.h  Fence.cpp  Fence.h  Lights.cpp  Lights.h  Tank.cpp  Tank.h  Time.cpp  TimeRange.cpp  TimeRange.h  TwoButtons.cpp  TwoButtons.h  arduino.ino
arduino/atelier/: atelier.ino
atelier/: __init__.py  alarm.py  arduino.py  atelier.ino  config.py  db.py  debug.py  fence.py  forms.py  helpers.py  lights.py  scheduler.py  shared.py  tank.py  workshop.py
atelier/static/: style.css
atelier/static/js/: debug.js  tank-stats.js  tank.js
atelier/templates/: arduino_400.html  arduino_404.html  config.html  debug.html  fence.html  home.html  index.html  layout.html  tank.html  tank_stats.html  workshop.html
deploy/: config.py  credentials.py  dhcpcd.conf  download.sh  install.sh  rc.local  setup.sh  update.sh  wpa_supplicant.conf
docs/: deploy.md  dev.md  manuel.md  prod.md
fake_arduino/: send_alert.py  server.py  state.json
server/: __init__.py  alerts.py  config.py  db.py  monitoring.py  notifications.py  scheduler.py  tank.py
server/arduino/: __init__.py  base.py  fence.py  tank.py  workshop.py
server/web/: __init__.py  alerts.py  auth.py  forms.py
server/web/routes/: base.py  (+7 more)
(+22 files in other folders)
