[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vincent Lefoulon <vincent.lefoulon@free.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.0"
requests = "^2.25.1"
schedule = "^1.0.0"
gevent = "^22.0.0"
jsonschema = "^4.0.0"
WTForms = "^3.0.0"
Flask-HTTPAuth = "^4.2.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
